Programa-Programa general

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -27,7 +27,7 @@
             <!-- Tab panes -->
             <div class="tab-content prima-program">
                 <div role="tabpanel" class="tab-pane active table-responsive" id="general">
-                    <table class="table  table-hover ta">
+                    <table class="table table-general table-hover">
                         <thead>
                         <tr>
                             <th></th>
@@ -105,10 +105,89 @@
                         </tr>
                         </tbody>
                     </table>
-                    <p class="text-center p-table"> <strong>PL = PLENARY LECTURE</strong></p>
+                    <p class="text-center p-table-general"> <strong>PL = PLENARY LECTURE</strong></p>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="social">...</div>
-                <div role="tabpanel" class="tab-pane" id="special">...</div>
+                <div role="tabpanel" class="tab-pane" id="special">
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Organizer</th>
+                            <th>Email</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Matroid Theory</td>
+                        </tr>
+                        <tr>
+                            <td>Bergman Spaces and Toeplitz operators</td>
+                        </tr>
+                        <tr>
+                            <td>Dynamical Systems and Geometry</td>
+                        </tr>
+                        <tr>
+                            <td>Differential Geometry</td>
+                        </tr>
+                        <tr>
+                            <td>Current Trends in Symplectic Geometry and Topology</td>
+                        </tr>
+                        <tr>
+                            <td>Symmetric Structures in Discrete Geometry</td>
+                        </tr>
+                        <tr>
+                            <td>Algebraic and Enumerative Combinatorics</td>
+                        </tr>
+                        <tr>
+                            <td>Discrete Math</td>
+                        </tr>
+                        <tr>
+                            <td>Mathematical Ecology and Epidemiology</td>
+                        </tr>
+                        <tr>
+                            <td>Advances in Geometric Methods in Mechanics with Applications</td>
+                        </tr>
+                        <tr>
+                            <td>Nonlinear Elliptic PDE and Systems</td>
+                        </tr>
+                        <tr>
+                            <td>Matrix Analysis and its Applications</td>
+                        </tr>
+                        <tr>
+                            <td>Instability of natural convection in cylindrical containers</td>
+                        </tr>
+                        <tr>
+                            <td>Algebraic Geometry</td>
+                        </tr>
+                        <tr>
+                            <td>Groups and orbifolds in geometry and topology</td>
+                        </tr>
+                        <tr>
+                            <td>Special Functions, Orthogonal Polynomials and Applications</td>
+                        </tr>
+                        <tr>
+                            <td>Singularities of Spaces and Mappings</td>
+                        </tr>
+                        <tr>
+                            <td>Poisson Geometry and Its Applications</td>
+                        </tr>
+                        <tr>
+                            <td>Geometry and Topology</td>
+                        </tr>
+                        <tr>
+                            <td>Inverse problems and PDE Control Theory</td>
+                        </tr>
+                        <tr>
+                            <td>Commutative Algebra: Homological and Combinatorial Methods</td>
+                        </tr>
+                        <tr>
+                            <td>Stochastic Processes and Applications</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
 
             </div>
 
