--- a/web/css/ccm.css
+++ b/web/css/ccm.css
@@ -116,7 +116,7 @@ body {
     border-color: #ffffff;
 }
 
-.table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
+.table-general > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
     padding: 15px;
     border-top: none !important;
     border-bottom: none !important;
@@ -125,7 +125,7 @@ body {
     text-align: center;
 }
 
-.p-table {
+.p-table-general {
     padding-top: 15px;
     color: #73BAC5;
 }
