--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -108,10 +108,10 @@
                     <p class="text-center p-table-general"> <strong>PL = PLENARY LECTURE</strong></p>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="social">...</div>
-                <div role="tabpanel" class="tab-pane" id="special">
-                    <table class="table table-hover">
+                <div role="tabpanel" class="tab-pane table-responsive" id="special">
+                    <table class="table table-special table-hover">
                         <thead>
-                        <tr>
+                        <tr style="background-color: #C5B1D4">
                             <th>Title</th>
                             <th>Organizer</th>
                             <th>Email</th>
@@ -120,70 +120,114 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td>Matroid Theory</td>
+                            <td><strong>Matroid Theory</strong></td>
+                            <td>Criel Merino</td>
+                            <td>merino<i class="fa-at fa"></i>matem.unam.mx</td>
+                        </tr>
+                        <tr style="background-color: #E1D6E8">
+                            <td><strong>Bergman Spaces and Toeplitz operators</strong></td>
+                            <td>Salvador Pérez-Esteva</td>
+                            <td>spesteva<i class="fa-at fa"></i>im.unam.mx</td>
                         </tr>
                         <tr>
-                            <td>Bergman Spaces and Toeplitz operators</td>
+                            <td><strong>Dynamical Systems and Geometry</strong></td>
+                            <td>Aubin Arroyo</td>
+                            <td>aubinarroyo<i class="fa-at fa"></i>im.unam.mx</td>
+                        </tr>
+                        <tr style="background-color: #E1D6E8">
+                            <td><strong>Differential Geometry</strong></td>
+                            <td>Jimmy Petean</td>
+                            <td>jimmy<i class="fa-at fa"></i>cimat.mx</td>
                         </tr>
                         <tr>
-                            <td>Dynamical Systems and Geometry</td>
+                            <td><strong>Current Trends in Symplectic Geometry and Topology</strong></td>
+                            <td>Andrés Pedroza</td>
+                            <td>andres_pedroza<i class="fa-at fa"></i>ucol.mx</td>
+                        </tr>
+                        <tr style="background-color: #E1D6E8">
+                            <td><strong>Symmetric Structures in Discrete Geometry</strong></td>
+                            <td>Daniel Pellicer</td>
+                            <td>pellicer<i class="fa-at fa"></i>matmor.unam.mx</td>
                         </tr>
                         <tr>
-                            <td>Differential Geometry</td>
+                            <td><strong>Algebraic and Enumerative Combinatorics</strong></td>
+                            <td>Ernesto Vallejo</td>
+                            <td>ernevallejo<i class="fa-at fa"></i>gmail.com</td>
+                        </tr>
+                        <tr style="background-color: #E1D6E8">
+                            <td><strong>Discrete Math</strong></td>
+                            <td>Natalia García-Colín</td>
+                            <td>garciacolin.natalia<i class="fa-at fa"></i>googlemail.com</td>
                         </tr>
                         <tr>
-                            <td>Current Trends in Symplectic Geometry and Topology</td>
+                            <td><strong>Mathematical Ecology and Epidemiology</strong></td>
+                            <td>Jorge Velasco-Hernández</td>
+                            <td>jx.velasco<i class="fa-at fa"></i>im.unam.mx</td>
+                        </tr>
+                        <tr style="background-color: #E1D6E8">
+                            <td><strong>Advances in Geometric Methods in Mechanics with Applications</strong></td>
+                            <td>Vakhtang Putkaradze</td>
+                            <td>putkarad<i class="fa-at fa"></i>ualberta.ca</td>
                         </tr>
                         <tr>
-                            <td>Symmetric Structures in Discrete Geometry</td>
+                            <td><strong>Nonlinear Elliptic PDE and Systems</strong></td>
+                            <td>Nils Ackerman</td>
+                            <td>nils<i class="fa-at fa"></i>ackermath.info</td>
+                        </tr>
+                        <tr style="background-color: #E1D6E8">
+                            <td><strong>Matrix Analysis and its Applications</strong></td>
+                            <td>FuzhenZhang</td>
+                            <td>zhang<i class="fa-at fa"></i>nova.edu</td>
                         </tr>
                         <tr>
-                            <td>Algebraic and Enumerative Combinatorics</td>
+                            <td><strong>Instability of natural convection in cylindrical containers</strong></td>
+                            <td>Eduardo Ramos</td>
+                            <td>erm<i class="fa-at fa"></i>ier.unam.mx</td>
+                        </tr>
+                        <tr style="background-color: #E1D6E8">
+                            <td><strong>Algebraic Geometry</strong></td>
+                            <td>Pedro Luis Del Ángel Rodríguez</td>
+                            <td>luis<i class="fa-at fa"></i>cimat.mx</td>
                         </tr>
                         <tr>
-                            <td>Discrete Math</td>
+                            <td><strong>Groups and orbifolds in geometry and topology</strong></td>
+                            <td>Ernesto Lupercio</td>
+                            <td>lupercio<i class="fa-at fa"></i>math.cinvestav.mx</td>
+                        </tr>
+                        <tr style="background-color: #E1D6E8">
+                            <td><strong>Special Functions, Orthogonal Polynomials and Applications</strong></td>
+                            <td>Manuel Domínguez de la Iglesia</td>
+                            <td>mdi29<i class="fa-at fa"></i>im.unam.mx</td>
                         </tr>
                         <tr>
-                            <td>Mathematical Ecology and Epidemiology</td>
+                            <td><strong>Singularities of Spaces and Mappings</strong></td>
+                            <td>JawadSnoussi</td>
+                            <td>jsnoussi<i class="fa-at fa"></i>im.unam.mx</td>
+                        </tr>
+                        <tr style="background-color: #E1D6E8">
+                            <td><strong>Poisson Geometry and Its Applications</strong></td>
+                            <td>Misael Avendaño Camacho</td>
+                            <td>misaelave<i class="fa-at fa"></i>mat.uson.mx</td>
                         </tr>
                         <tr>
-                            <td>Advances in Geometric Methods in Mechanics with Applications</td>
+                            <td><strong>Geometry and Topology</strong></td>
+                            <td>Daniel Juan Pineda</td>
+                            <td>daniel<i class="fa-at fa"></i>matmor.unam.mx</td>
+                        </tr>
+                        <tr style="background-color: #E1D6E8">
+                            <td><strong>Inverse problems and PDE Control Theory</strong></td>
+                            <td>Abdon Choque Rivero</td>
+                            <td>abdon.ifm<i class="fa-at fa"></i>gmail.com</td>
                         </tr>
                         <tr>
-                            <td>Nonlinear Elliptic PDE and Systems</td>
+                            <td><strong>Commutative Algebra: Homological and Combinatorial Methods</strong></td>
+                            <td>Rafael Heraclio Villarreal</td>
+                            <td>rhvillarreal<i class="fa-at fa"></i>gmail.com</td>
                         </tr>
-                        <tr>
-                            <td>Matrix Analysis and its Applications</td>
-                        </tr>
-                        <tr>
-                            <td>Instability of natural convection in cylindrical containers</td>
-                        </tr>
-                        <tr>
-                            <td>Algebraic Geometry</td>
-                        </tr>
-                        <tr>
-                            <td>Groups and orbifolds in geometry and topology</td>
-                        </tr>
-                        <tr>
-                            <td>Special Functions, Orthogonal Polynomials and Applications</td>
-                        </tr>
-                        <tr>
-                            <td>Singularities of Spaces and Mappings</td>
-                        </tr>
-                        <tr>
-                            <td>Poisson Geometry and Its Applications</td>
-                        </tr>
-                        <tr>
-                            <td>Geometry and Topology</td>
-                        </tr>
-                        <tr>
-                            <td>Inverse problems and PDE Control Theory</td>
-                        </tr>
-                        <tr>
-                            <td>Commutative Algebra: Homological and Combinatorial Methods</td>
-                        </tr>
-                        <tr>
-                            <td>Stochastic Processes and Applications</td>
+                        <tr style="background-color: #E1D6E8">
+                            <td><strong>Stochastic Processes and Applications</strong></td>
+                            <td>Juan Carlos Pardo</td>
+                            <td>jcpardo<i class="fa-at fa"></i>cimat.mx</td>
                         </tr>
                         </tbody>
                     </table>
