--- a/web/css/ccm.css
+++ b/web/css/ccm.css
@@ -135,7 +135,7 @@ body {
     color: #6db7c2;
 }
 
-.table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
+.table-general > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
     padding: 15px;
     border-top: none !important;
     border-bottom: none !important;
@@ -144,9 +144,16 @@ body {
     text-align: center;
 }
 
-.p-table {
+.p-table-general {
     padding-top: 15px;
     color: #73BAC5;
 }
 
-
+.table-special > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
+    padding: 5px;
+    border-top: none !important;
+    border-bottom: none !important;
+    font-size: 15px;
+    color: #2C2C2C;
+    text-align: left;
+}
