Creación de los archivos para cada una de las páginas

--- a/views/404.html.twig
+++ b/views/404.html.twig
@@ -1,1 +1,10 @@
--- 404
+{% extends 'base.html.twig' %}
+
+{% block content %}
+
+    <div class="prima-title"><strong>Content not found</strong></div>
+    <div class="container prima-content">
+        <img src="img/armadillo.png" class="img-responsive center-block">
+    </div>
+
+{% endblock %}
