--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -31,17 +31,17 @@
                         <thead>
                         <tr>
                             <th></th>
-                            <th style="background-color: #EEF5F6">SUNDAY 13</th>
-                            <th>MONDAY 14</th>
-                            <th style="background-color: #EEF5F6">TUESDAY 15</th>
-                            <th>WEDNESDAY 16</th>
-                            <th style="background-color: #EEF5F6">THURSDAY 17</th>
-                            <th>FRIDAY 18</th>
+                            <th style="background-color: #EEF5F6; text-align: center">SUNDAY 13</th>
+                            <th style="text-align: center">MONDAY 14</th>
+                            <th style="background-color: #EEF5F6; text-align: center">TUESDAY 15</th>
+                            <th style="text-align: center">WEDNESDAY 16</th>
+                            <th style="background-color: #EEF5F6; text-align: center">THURSDAY 17</th>
+                            <th style="text-align: center">FRIDAY 18</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row" style="background-color: #E2F0F2; text-align: left">9:00-10:00</th>
+                            <th scope="row" style="background-color: #E2F0F2; text-align: left;">9:00-10:00</th>
                             <td style="background-color: #D6EAED">&nbsp;</td>
                             <td style="background-color: #E2F0F2">INAUGURAL CEREMONY</td>
                             <td style="background-color: #D6EAED">PL 3</td>
