--- a/views/sponsors.html.twig
+++ b/views/sponsors.html.twig
@@ -4,15 +4,15 @@
 
     <div class="container">
 
-        <div class="page-header text-center"><h2>Sponsors<h2></div>
-        <div class="row">
+        <div class="prima-title"><strong>SPONSORS</strong></div>
+        <div class="row prima-content">
             <div class="col-md-3"><img src="img/sponsor_unam_color.png" class="img-responsive text-center"></div>
             <div class="col-md-3"><img src="img/sponsor_IDM_color.png" class="img-responsive text-center"></div>
             <div class="col-md-3"><img src="img/sponsor_cmo_color.png" class="img-responsive text-center"></div>
             <div class="col-md-3"><img src="img/sponsor_ccm_color.png" class="img-responsive text-center"></div>
         </div>
-        <div class="page-header"></div>
-        <div class="row">
+
+        <div class="row prima-content">
             <div class="col-md-2"><img src="img/sponsor_conacyt_color.png" class="img-responsive text-center"></div>
             <div class="col-md-2"><img src="img/sponsor_amc_color.png" class="img-responsive text-center"></div>
             <div class="col-md-2"><img src="img/sponsor_prima_color.png" class="img-responsive text-center"></div>
