--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Montserrat">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
@@ -56,7 +58,7 @@
                 <li><a href="program">Program</a></li>
                 <li><a href="#">Registration</a></li>
                 <li><a href="plenary-speakers">Plenary Speakers</a></li>
-                <li><a href="finantial-assistance">Finantial Assistance</a></li>
+                <li><a href="financial-assistance">Finantial Assistance</a></li>
                 <li><a href="sponsors">Sponsors</a></li>
                 <li><a href="oaxaca">Oaxaca</a></li>
                 <li><a href="contact">Contact</a></li>
@@ -72,6 +74,7 @@
 
 {% block footer %}
     <footer class="footer">
+
         <div class="row text-center">
             <div class="col-md-1 col-md-offset-1">
                 <img src="img/unam-logo.png" class="img-responsive">
