--- a/views/landing.html.twig
+++ b/views/landing.html.twig
@@ -99,7 +99,7 @@
 </div>
 
 <div class="intro-btn">
-    <button type="button" class="btn btn-primary-outline">Entrar</button>
+    <a href="home" class="btn btn-primary-outline" role="button">Entrar</a>
 </div>
 
 
