--- a/web/css/ccm.css
+++ b/web/css/ccm.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.google.com/specimen/Montserrat);
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
@@ -8,6 +10,7 @@ html {
 body {
     padding-top: 100px;
     margin-bottom: 200px;
+    font-family: "Montserrat", sans-serif;
 }
 
 .footer {
@@ -46,7 +49,6 @@ body {
     position: relative;
     text-align: center;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-
 }
 
 .prima-header-content {
@@ -61,6 +63,7 @@ body {
 .navbar-default .navbar-nav > li > a {
     color: #6db7ca;
     font-size: 18px;
+    padding-top: 0px;
 }
 
 .cd-primary-nav {
@@ -80,6 +83,7 @@ body {
     text-align: center;
     font-size: 25px;
     color: #6CB7C3;
+    padding-top: 30px;
 }
 
 .prima-content {
