--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -22,16 +22,16 @@
 
         <div class="page-header text-center"><h2>Organizing Committee<h2></div>
         <div class="row text-center">
-            <div class="col-md-3"><img src="img/FirstPage_rolando.png" alt="..." class="img-circle text-center"><br>
+            <div class="col-md-3"><img src="img/FirstPage_rolando.png" alt="..." class="img-thumbnail text-center"><br>
                 <h4 class="text-muted">Rolando Jiménez <br><small>Instituto de Matemáticas, UNAM</small></h4>
             </div>
-            <div class="col-md-3"><img src="img/FirstPage_Daniel.png" alt="..." class="img-circle"><br>
+            <div class="col-md-3"><img src="img/FirstPage_Daniel.png" alt="..." class="img-thumbnail text-center"><br>
                 <h4 class="text-muted">Daniel Juan<br><small>Centro de Ciencias Matemáticas, UNAM</small></h4>
             </div>
-            <div class="col-md-3"><img src="img/FirstPage_silvia.png" alt="..." class="img-circle"><br>
+            <div class="col-md-3"><img src="img/FirstPage_silvia.png" alt="..." class="img-thumbnail text-center"><br>
                 <h4 class="text-muted">Silvia Millan<br><small>Centro de Investigación en Matemáticas</small></h4>
             </div>
-            <div class="col-md-3"><img src="img/FirstPage_seade.png" alt="..." class="img-circle"><br>
+            <div class="col-md-3"><img src="img/FirstPage_seade.png" alt="..." class="img-thumbnail text-center"><br>
                 <h4 class="text-muted">José A. Seade<br><small>Instituto de Matemáticas, UNAM</small></h4>
             </div>
         </div>
