--- a/views/sponsors.html.twig
+++ b/views/sponsors.html.twig
@@ -2,22 +2,36 @@
 
 {% block content %}
 
-    <div class="container">
+    <div class="prima-title"><strong>SPONSORS</strong></div>
+    <div class="row prima-content"></div>
+        {#<div class="row">
 
-        <div class="prima-title"><strong>SPONSORS</strong></div>
+            <div class="logo"><img src="img/sponsor_unam_color.png" class="text-center"></div>
+            <div class="logo"><img src="img/sponsor_IDM_color.png" class="text-center"></div>
+            <div class="logo"><img src="img/sponsor_cmo_color.png" class="text-center"></div>
+            <div class="logo"><img src="img/sponsor_ccm_color.png" class="text-center"></div>
+        </div>
+        <div class="row">
+            <div class="logo"><img src="img/sponsor_conacyt_color.png" class="text-center"></div>
+            <div class="logo"><img src="img/sponsor_amc_color.png" class="text-center"></div>
+            <div class="logo"><img src="img/sponsor_prima_color.png" class="text-center"></div>
+            <div class="logo"><img src="img/sponsor_ito_color.png" class="text-center"></div>
+            <div class="logo"><img src="img/sponsor_smm_color.png" class="text-center"></div>
+        </div>#}
+    <div class="container">
         <div class="row prima-content">
-            <div class="col-md-3"><img src="img/sponsor_unam_color.png" class="img-responsive text-center"></div>
-            <div class="col-md-3"><img src="img/sponsor_IDM_color.png" class="img-responsive text-center"></div>
-            <div class="col-md-3"><img src="img/sponsor_cmo_color.png" class="img-responsive text-center"></div>
-            <div class="col-md-3"><img src="img/sponsor_ccm_color.png" class="img-responsive text-center"></div>
+            <div class="col-md-2"><a href="https://www.unam.mx/"><img src="img/sponsor_unam_color.png" class="img-responsive sponsor"></a></div>
+            <div class="col-md-3"><a href="http://www.matem.unam.mx/"><img src="img/sponsor_IDM_color.png" class="img-responsive sponsor"></a></div>
+            <div class="col-md-3"><a href="http://www.matmor.unam.mx"><img src="img/sponsor_cmo_color.png" class="img-responsive sponsor"></a></div>
+            <div class="col-md-4"><a href=""><img src="img/sponsor_ccm_color.png" class="img-responsive sponsor"></a></div>
         </div>
 
         <div class="row prima-content">
-            <div class="col-md-2"><img src="img/sponsor_conacyt_color.png" class="img-responsive text-center"></div>
-            <div class="col-md-2"><img src="img/sponsor_amc_color.png" class="img-responsive text-center"></div>
-            <div class="col-md-2"><img src="img/sponsor_prima_color.png" class="img-responsive text-center"></div>
-            <div class="col-md-2"><img src="img/sponsor_ito_color.png" class="img-responsive text-center"></div>
-            <div class="col-md-2"><img src="img/sponsor_smm_color.png" class="img-responsive text-center"></div>
+            <div class="col-md-2 col-md-offset-1"><a href="http://www.conacyt.gob.mx/"><img src="img/sponsor_conacyt_color.png" class="img-responsive sponsor"></a></div>
+            <div class="col-md-2"><a href="http://www.amc.unam.mx/"><img src="img/sponsor_amc_color.png" class="img-responsive sponsor"></a></div>
+            <div class="col-md-2"><a href="http://www.primath.org/"><img src="img/sponsor_prima_color.png" class="img-responsive sponsor"></a></div>
+            <div class="col-md-2"><a href="http://www.itoaxaca.edu.mx/"><img src="img/sponsor_ito_color.png" class="img-responsive sponsor"></a></div>
+            <div class="col-md-2"><a href="http://www.smm.org.mx/"><img src="img/sponsor_smm_color.png" class="img-responsive sponsor"></a></div>
         </div>
         <h1></h1>
     </div>
