--- a/views/oaxaca.html.twig
+++ b/views/oaxaca.html.twig
@@ -2,13 +2,138 @@
 
 {% block content %}
 
-    <div class="prima-title"><strong>OAXACA</strong></div>
-    <div class="container prima-content">
-        <p>The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca,
-            Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes,
-            departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and
-            facilitating the development of the mathematical sciences throughout the Pacific Rim region.
+    <div class="oaxaca-banner">
+        <div class="row">
+
+        </div>
+    </div>
+
+    <div class="oaxaca-content container">
+        <h4>Getting there</h4>
+        <p class="oaxaca-p text-justify">
+            Oaxaca has an international airport (OAX). You can either fly to Oaxaca from Mexico City
+            (by Aeromexico, Interjet or Volaris) or from Houston (by United); there are also flights from
+            other Mexican cities. There is an intercity bus service from Mexico City to Oaxaca; the trip
+            takes 6 to 7 hours. The buses depart from Terminal de Autobuses de Pasajeros de Oriente
+            (TAPO) which can be reached from the Mexico City Airport by city bus (metrobus).
         </p>
+
+        <h4>Conference venue</h4>
+        <div class="row">
+
+            <div class="col-lg-6">
+                <p class="oaxaca-p">
+                    Instituto Tecnológico de Oaxaca (ITO)
+                    Avenida Ing. Víctor Bravo Ahuja No. 125 Esquina Calzada Tecnológico, C.P. 68030
+                    All academic activities will take place here.
+                </p>
+            </div>
+        </div>
+
+        <h4>Hotels</h4>
+        <p class="oaxaca-p"><ins>Each participant should reserve the hotel.</ins></p>
+
+
+        <div class="row">
+
+            <div class="col-lg-6">
+                <h4><a href="http://www.hotelvictoriaoax.com.mx" target="_blank">HOTEL VICTORIA OAXACA (SEDE)</a></h4>
+                <p class="oaxaca-p">Carretera Internacional Km. 545 Col. Figueroa C. P. 68070 Oaxaca, Oaxaca México<br>
+                    Tel: +52 (951) 502 0850 (calls from Mexico also: 01 (800) 714 3720)<br>
+                    Fax: +52 (951) 515 2411<br>
+                    <a href="http://www.hotelvictoriaoax.com.mx">www.hotelvictoriaoax.com.mx</a><br>
+                    Contact: Rosalba Morales / Brenda García<br>
+                    rosalba<i class="fa fa-at"></i>hotelvictoriaoax.com.mx<br>
+                    reservaciones<i class="fa fa-at"></i>hotelvictoriaoax.com.mx
+                </p>
+                <p class="oaxaca-p">
+                    Single: $ 952.00<br>
+                    Double: $ 952.00<br>
+                    Single junior suite: $ 1,190.00<br>
+                    Double junior suite: $ 1,190.00<br>
+                    Additional guest: $ 238.00<br>
+                </p>
+
+            </div>
+            <div class="col-lg-6">
+                <h4><a href="http://www.casadelosfrailes.com" target="_blank" >HOTEL CASA DE LOS FRAILES</a></h4>
+                <p class="oaxaca-p">Constitución No. 203, Centro Histórico, Oaxaca, Oax.<br>
+                    +52-951-513 6670 / +52-951-514 6495<br>
+                    hotelcasadelosfrailes<i class="fa fa-at"></i>yahoo.com.mx<br>
+                    <a href="http://www.casadelosfrailes.com" target="_blank" >www.casadelosfrailes.com</a>
+                </p>
+
+                <p class="oaxaca-p">
+                    Single $960.00<br>
+                    King size $1,180.00<br>
+                    King size special $1,260.00<br>
+                    Standard double $1,180.00 (up to 3 persons, 2 double beds)<br>
+                    Standard double special $1,260.00 (up to 3 persons, 2 double beds)<br>
+                    *Fourth person in double room: $150.00 extra<br>
+                    10% off for conference participants (subject to availability)<br>
+                </p>
+
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6">
+                <h4><a href="mailto:hostal@lanoria.com.mx">HOTEL HOSTAL DE LA NORIA</a></h4>
+                <p class="oaxaca-p"> Av. Hidalgo 918 Centro Oaxaca, Oax. 68000 México<br>
+                    booking: hostal<i class="fa fa-at"></i>lanoria.com.mx<br>
+                    Contact: Marícruz Oliva Antonio.<br>
+                    Tel. + 52-951-5015400 ext 402.<br>
+                    Calls from Mexico also: 01 800 2023920.<br>
+                    Fax: + 52-951-5163992.
+                </p>
+
+                <p class="oaxaca-p">
+                    Single $1,071.00<br>
+                    Souble $1,250.00<br>
+                    Tripple $3 1.1428<br>
+                    Single junior suite $1,368.50<br>
+                    Double junior suite $1,547.00<br>
+                    Tripple junior suite $1,725.50<br>
+                    Single suite $1,725.50<br>
+                    Double suite $ 2,023.00.<br>
+                    Conference discount ONLY available upon booking by email/phone.
+                </p>
+
+            </div>
+
+            <div class="col-lg-6">
+                <h4><a href="http://www.casaconzatti.com.mx" target="_blank">HOTEL CASA CONZATTI</a></h4>
+                <p class="oaxaca-p">
+                    Gómez Farias #218, Col Centro, Oaxaca, Oax., C.P. 68000, México.<br>
+                    +52-951- 513 85 00, calls from Mexico also 01 800 717 99 74<br>
+                    <a href="http://www.casaconzatti.com.mx" target="_blank">www.casaconzatti.com.mx</a>
+                </p>
+
+                <p class="oaxaca-p">
+                    single or double $1,050.00 (Continental breakfast included)<br>
+                    Contact: Guadalupe Acevedo Sánchez<br>
+                    hconzatti<i class="fa fa-at"></i>prodigy.net.mx
+                </p>
+            </div>
+        </div>
+
+        <p class="oaxaca-p">
+            All rates are in MXN.<br>
+            All rates and discounts are subject to availability.<br>
+            All rates are special for conference participants, please indicate this when booking.<br>
+        </p>
+
+
+
+
+
+
+
+
+
+
+
     </div>
 
 {% endblock %}
