--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -38,18 +38,24 @@
 
         <div class="page-header text-center"><h2>Scientific Committee<h2></div>
         <div class="row text-muted">
-            <div class="col-md-4"><h3>Maria Chudnovsky <small>Columbia University</small></h3></div>
-            <div class="col-md-4"><h3>Kenji Fukaya <small>Simons Center, Stony Brook</small></h3></div>
-            <div class="col-md-4"><h3>Peter Sarnak <small>Princeton</small></h3></div>
-            <div class="col-md-4"><h3>Jongil Park <small>Seoul National University</small></h3></div>
-            <div class="col-md-4"><h3>Kyoji Saito <small>Kavli-IPMU, Tokyo</small></h3></div>
-            <div class="col-md-4"><h3>Patricio Felmer <small>CMM, Universidad de Chile</small></h3></div>
-            <div class="col-md-4"><h3>Weinan E <small>Peking U/Princeton</small></h3></div>
-            <div class="col-md-4"><h3>Alan Carey <small>Aust.National University</small></h3></div>
-            <div class="col-md-4"><h3>Sujatha Ramdorai <small>UBC, Canada</small></h3></div>
-            <div class="col-md-4"><h3>Alberto Verjovsky <small>UNAM, Mexico</small></h3></div>
-            <div class="col-md-4"><h3>Hinke Osinga <small>University of Auckland</small></h3></div>
-            <div class="col-md-4"><h3>Alice Guionnet <small>MIT</small></h3></div>
+            <div class="col-md-4"><h3>Maria Chudnovsky <br><small>Columbia University</small></h3></div>
+            <div class="col-md-4"><h3>Kenji Fukaya <br><small>Simons Center, Stony Brook</small></h3></div>
+            <div class="col-md-4"><h3>Peter Sarnak <br><small>Princeton</small></h3></div>
+        </div>
+        <div class="row text-muted">
+            <div class="col-md-4"><h3>Jongil Park <br><small>Seoul National University</small></h3></div>
+            <div class="col-md-4"><h3>Kyoji Saito <br><small>Kavli-IPMU, Tokyo</small></h3></div>
+            <div class="col-md-4"><h3>Patricio Felmer <br><small>CMM, Universidad de Chile</small></h3></div>
+        </div>
+        <div class="row text-muted">
+            <div class="col-md-4"><h3>Weinan E <br><small>Peking U/Princeton</small></h3></div>
+            <div class="col-md-4"><h3>Alan Carey <br><small>Aust.National University</small></h3></div>
+            <div class="col-md-4"><h3>Sujatha Ramdorai <br><small>UBC, Canada</small></h3></div>
+        </div>
+        <div class="row text-muted">
+            <div class="col-md-4"><h3>Alberto Verjovsky <br><small>UNAM, Mexico</small></h3></div>
+            <div class="col-md-4"><h3>Hinke Osinga <br><small>University of Auckland</small></h3></div>
+            <div class="col-md-4"><h3>Alice Guionnet <br><small>MIT</small></h3></div>
         </div>
 
         <div class="page-header text-center"><h2>Location<h2></div>
