--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -2,13 +2,78 @@
 
 {% block content %}
 
-    <div class="prima-title"><strong>PLENARY SPEAKERS</strong></div>
-    <div class="container prima-content">
-        <p>The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca,
-            Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes,
-            departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and
-            facilitating the development of the mathematical sciences throughout the Pacific Rim region.
-        </p>
+    <div class="container">
+        <div class="page-header prima-title">PLENARY SPEAKERS</div>
+
+        <div class="row">
+            <div class="col-md-3">
+                <img src="img/speakers/AnaAmador.jpg" class="img-responsive img-thumbnail"><br>
+                <h4>Ana Amador<br><small>University</small></h4>
+            </div>
+            <div class="col-md-3">
+                <img src="img/speakers/AlexeyBondal.jpg" class="img-responsive img-thumbnail"><br>
+                <h4>Alexey Bondal<br><small>University</small></h4>
+            </div>
+            <div class="col-md-3">
+                <img src="img/speakers/ChenyangXu.jpeg" class="img-responsive img-thumbnail">
+                <h4>Chenyang Xu<br><small>University</small></h4>
+            </div>
+            <div class="col-md-3">
+                <img src="img/speakers/DavidBrydges.jpg" class="img-responsive img-thumbnail">
+                <h4>David Brydges<br><small>University</small></h4>
+            </div>
+        </div>
+        <div class="page-header"></div>
+        <div class="row">
+
+            <div class="col-md-3">
+                <img src="img/speakers/Duke.png" class="img-responsive"><br>
+                <h4>Duke<br><small>University</small></h4>
+            </div>
+            <div class="col-md-3">
+                <img src="img/speakers/FernandoCodaMarques.jpg" class="img-responsive">
+                <h4>Fernando Coda Marques<br><small>University</small></h4>
+            </div>
+            <div class="col-md-3">
+                <img src="img/speakers/GeoffWhittle.gif" class="img-responsive">
+                <h4>Geoff Whittle<br><small>University</small></h4>
+            </div>
+            <div class="col-md-3">
+                <img src="img/speakers/HeeOh.jpg" class="img-responsive"><br>
+                <h4>Hee Oh<br><small>University</small></h4>
+            </div>
+        </div>
+        <div class="page-header"></div>
+        <div class="row">
+            <div class="col-md-3">
+                <img src="img/speakers/HirakuNakajima.jpg" class="img-responsive"><br>
+                <h4>Hiraku Nakajima<br><small>University</small></h4>
+            </div>
+            <div class="col-md-3">
+                <img src="img/speakers/IanAgol.jpg" class="img-responsive">
+                <h4>Ian Agol<br><small>University</small></h4>
+            </div>
+            <div class="col-md-3">
+                <img src="img/speakers/KerryLandman.jpg" class="img-responsive"><br>
+                <h4>Kerry Landman<br><small>University</small></h4>
+            </div>
+            <div class="col-md-3">
+                <img src="img/speakers/LexingYing.jpg" class="img-responsive"><br>
+                <h4>LexingYing<br><small>University</small></h4>
+            </div>
+        </div>
+        <div class="page-header"></div>
+        <div class="row">
+            <div class="col-md-3 col-md-offset-3">
+                <img src="img/speakers/ManuelDelPino.jpeg" class="img-responsive"><br>
+                <h4>Manuel del Pino<br><small>University</small></h4>
+            </div>
+            <div class="col-md-3">
+                <img src="img/speakers/Maryam-Mirzajani.jpg" class="img-responsive">
+                <h4>Maryam Mirzajani<br><small>University</small></h4>
+            </div>
+        </div>
+        <div class="page-header"></div>
     </div>
 
 {% endblock %}
